# xi-tui

./: Cargo.toml
src/: main.rs
src/view/: view.rs
