[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "xi-tui"
version = "0.1.0"

[dependencies]
clap = "2.26.2"
error-chain = "0.11.0"
futures = "0.1.16"
log = "0.3.8"
log4rs = "0.7.0"
termion = { git = "https://github.com/jakalope/termion" }
tokio-core = "0.1.10"
vixi = { git = "https://github.com/jakalope/vixi" }

[dependencies.clippy]
optional = true
version = "0.0.165"

[dependencies.xrl]
git = "https://github.com/little-dude/xrl"
